tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/unshadowable-parameter.wyst
module demo
fn identity(widen: u64) -> u64 { return widen }
